<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InterventionFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_note_intervention"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/note_intervention"
                android:textSize="16sp"
                android:layout_marginLeft="16dp"/>

            <EditText
                android:id="@+id/edit_text_note_intervention"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:lines="5"
                android:maxLines="10"
                android:gravity="top|left"
                android:layout_margin="16dp"/>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/hint_type_intervention"
                android:layout_margin="16dp"
                android:hint="@string/type_intervention"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/auto_complete_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"/>

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_app"
                android:layout_marginLeft="12dp"/>


            <TextView
                android:id="@+id/date_start_intervention"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_date"
                android:textSize="16sp"
                android:layout_margin="16dp"
                android:padding="16dp"
                android:background="@drawable/border_radius_empty"
            />

            <TextView
                android:id="@+id/date_end_intervention"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/end_date"
                android:textSize="16sp"
                android:layout_margin="16dp"
                android:padding="16dp"
                android:background="@drawable/border_radius_empty"
                />



            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/btn_valid_intervention"
                android:text="@string/save"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:backgroundTint="@color/theme_color"
                app:cornerRadius="10dp" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/btnRetourIntervention"
                android:text="@string/btn_return"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:backgroundTint="@color/white"
                android:textColor="@color/gray"
                style="@style/Widget.AppCompat.Button.Borderless"/>


        </LinearLayout>

    </ScrollView>

</FrameLayout>