<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:gravity="start"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/comment"
                android:textStyle="bold"
                android:textSize="25dp"
                android:layout_marginLeft="10dp" />

            <ImageView
                android:id="@+id/end_note"
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_close_24"
                android:layout_alignParentEnd="true"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/text_note_maintenance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/note_maintenance"
            android:textSize="16sp"
            android:layout_marginLeft="16dp"/>

        <EditText
            android:id="@+id/edit_text_note_maintenance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="10"
            android:maxLines="20"
            android:gravity="top|left"
            android:layout_margin="16dp"/>


        <CheckBox
            android:id="@+id/checkboxComplete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complete_visit"
            android:checked="true"
            android:layout_marginLeft="12dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/btn_valid_maintenance"
            android:text="@string/save_close"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:backgroundTint="@color/theme_color"
            app:cornerRadius="10dp" />

    </LinearLayout>

</FrameLayout>