<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/theme_color"
    android:windowSoftInputMode="adjustResize"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_edittext" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_login"
                        android:id="@+id/loginText"
                        android:textSize="36sp"
                        android:textAlignment="textStart"
                        android:textStyle="bold"
                        android:textColor="@color/theme_color"/>

            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/inputLogin"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/ic_baseline_account_box_24"
                android:drawablePadding="8dp"
                android:hint="@string/input_login"
                android:drawableTint="@color/theme_color"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"
                android:inputType="text"
                android:autofillHints="username" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/inputPsw"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/ic_baseline_password_24"
                android:drawablePadding="8dp"
                android:hint="@string/input_psw"
                android:drawableTint="@color/theme_color"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"
                android:inputType="textPassword"
                android:autofillHints="username" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/btnConnect"
                android:text="@string/btn_connect"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/theme_color"
                app:cornerRadius="10dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/forgot_login"
        android:textSize="14sp"
        android:textAlignment="center"
        android:id="@+id/signupText"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp" />

</LinearLayout>