<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp">

    <EditText
        android:id="@+id/hidden_input_mountage"
        android:inputType="text"
        android:visibility="invisible"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

    <EditText
        android:id="@+id/hidden_input_appareil"
        android:inputType="text"
        android:visibility="invisible"
        android:layout_width="0dp"
        android:layout_height="0dp"/>

    <LinearLayout
        android:id="@+id/linear_layout_mountage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/btnValidMountage"
            android:text="@string/save"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/theme_color"
            app:cornerRadius="10dp" />

        <TextView
            android:id="@+id/mountage_closed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/finish_mount"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:paddingTop="2dp"
            android:visibility="gone"
            android:layout_marginBottom="10dp"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/btnRetourMontage"
            android:text="@string/btn_return"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:backgroundTint="@color/white"
            android:textColor="@color/gray"
            style="@style/Widget.AppCompat.Button.Borderless"/>


    </LinearLayout>


</LinearLayout>
